analyzer/freadin.output
Terminals unused in grammar

   NAME2
   TUNDEF
   TNODE
   TUMIN
   TFUNC
   TARRAY
   TELM


Grammar

    0 $accept: statement_list $end

    1 statement_list: '\n'
    2               | statement '\n'
    3               | statement_list '\n'
    4               | statement_list statement '\n'

    5 statement: number TDEF NAME '=' expr
    6          | number TDEF NAME '=' STR
    7          | number TDEF NAME '[' expr ']' '=' expr
    8          | number TDEF NAME '=' '{' elmnts '}'
    9          | number TDEF NAME '[' expr ']' '=' '{' elmnts '}'
   10          | number TH1 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR
   11          | number TH1 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP
   12          | number TH1 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP var
   13          | number TH2 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR
   14          | number TH2 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP
   15          | number TH2 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var
   16          | number TCOM

   17 var: expr

   18 elmnts: expr ',' elmnts
   19       | expr

   20 expr: expr TLOR expr
   21     | expr TLAND expr
   22     | expr '|' expr
   23     | expr '^' expr
   24     | expr '&' expr
   25     | expr TEQ expr
   26     | expr TNEQ expr
   27     | expr TLE expr
   28     | expr TGE expr
   29     | expr '<' expr
   30     | expr '>' expr
   31     | expr TSL expr
   32     | expr TSR expr
   33     | expr '+' expr
   34     | expr '-' expr
   35     | expr '*' expr
   36     | expr '/' expr
   37     | expr '%' expr
   38     | '-' expr
   39     | '+' expr
   40     | '!' expr
   41     | '~' expr
   42     | '(' expr ')'
   43     | NAME '[' expr ']'
   44     | NAME '(' elmnts ')'
   45     | NAME
   46     | NUM

   47 number: NUM
   48       | '+' NUM
   49       | '-' NUM


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 3 4
'!' (33) 40
'%' (37) 37
'&' (38) 24
'(' (40) 42 44
')' (41) 42 44
'*' (42) 35
'+' (43) 33 39 48
',' (44) 18
'-' (45) 34 38 49
'/' (47) 36
'<' (60) 29
'=' (61) 5 6 7 8 9
'>' (62) 30
'[' (91) 7 9 43
']' (93) 7 9 43
'^' (94) 23
'{' (123) 8 9
'|' (124) 22
'}' (125) 8 9
'~' (126) 41
error (256)
NAME (258) 5 6 7 8 9 10 11 12 13 14 15 43 44 45
NAME2 (259)
NUM (260) 46 47 48 49
TDEF (261) 5 6 7 8 9
TH1 (262) 10 11 12
TH2 (263) 13 14 15
TCOM (264) 16
TSEP (265) 10 11 12 13 14 15
STR (266) 6 10 11 12 13 14 15
TUNDEF (267)
TNODE (268)
TUMIN (269)
TFUNC (270)
TARRAY (271)
TELM (272)
TLOR (273) 20
TLAND (274) 21
TEQ (275) 25
TNEQ (276) 26
TLE (277) 27
TGE (278) 28
TSR (279) 32
TSL (280) 31
UPLUS (281)
UMINUS (282)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
statement_list (50)
    on left: 1 2 3 4, on right: 0 3 4
statement (51)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16, on right: 2 4
var (52)
    on left: 17, on right: 10 11 12 13 14 15
elmnts (53)
    on left: 18 19, on right: 8 9 18 44
expr (54)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43 44 45 46, on right: 5 7 9 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
number (55)
    on left: 47 48 49, on right: 5 6 7 8 9 10 11 12 13 14 15 16


state 0

    0 $accept: . statement_list $end

    NUM   shift, and go to state 1
    '+'   shift, and go to state 2
    '-'   shift, and go to state 3
    '\n'  shift, and go to state 4

    statement_list  go to state 5
    statement       go to state 6
    number          go to state 7


state 1

   47 number: NUM .

    $default  reduce using rule 47 (number)


state 2

   48 number: '+' . NUM

    NUM  shift, and go to state 8


state 3

   49 number: '-' . NUM

    NUM  shift, and go to state 9


state 4

    1 statement_list: '\n' .

    $default  reduce using rule 1 (statement_list)


state 5

    0 $accept: statement_list . $end
    3 statement_list: statement_list . '\n'
    4               | statement_list . statement '\n'

    $end  shift, and go to state 10
    NUM   shift, and go to state 1
    '+'   shift, and go to state 2
    '-'   shift, and go to state 3
    '\n'  shift, and go to state 11

    statement  go to state 12
    number     go to state 7


state 6

    2 statement_list: statement . '\n'

    '\n'  shift, and go to state 13


state 7

    5 statement: number . TDEF NAME '=' expr
    6          | number . TDEF NAME '=' STR
    7          | number . TDEF NAME '[' expr ']' '=' expr
    8          | number . TDEF NAME '=' '{' elmnts '}'
    9          | number . TDEF NAME '[' expr ']' '=' '{' elmnts '}'
   10          | number . TH1 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR
   11          | number . TH1 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP
   12          | number . TH1 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP var
   13          | number . TH2 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR
   14          | number . TH2 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP
   15          | number . TH2 NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var
   16          | number . TCOM

    TDEF  shift, and go to state 14
    TH1   shift, and go to state 15
    TH2   shift, and go to state 16
    TCOM  shift, and go to state 17


state 8

   48 number: '+' NUM .

    $default  reduce using rule 48 (number)


state 9

   49 number: '-' NUM .

    $default  reduce using rule 49 (number)


state 10

    0 $accept: statement_list $end .

    $default  accept


state 11

    3 statement_list: statement_list '\n' .

    $default  reduce using rule 3 (statement_list)


state 12

    4 statement_list: statement_list statement . '\n'

    '\n'  shift, and go to state 18


state 13

    2 statement_list: statement '\n' .

    $default  reduce using rule 2 (statement_list)


state 14

    5 statement: number TDEF . NAME '=' expr
    6          | number TDEF . NAME '=' STR
    7          | number TDEF . NAME '[' expr ']' '=' expr
    8          | number TDEF . NAME '=' '{' elmnts '}'
    9          | number TDEF . NAME '[' expr ']' '=' '{' elmnts '}'

    NAME  shift, and go to state 19


state 15

   10 statement: number TH1 . NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR
   11          | number TH1 . NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP
   12          | number TH1 . NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP var

    NAME  shift, and go to state 20


state 16

   13 statement: number TH2 . NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR
   14          | number TH2 . NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP
   15          | number TH2 . NAME TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var

    NAME  shift, and go to state 21


state 17

   16 statement: number TCOM .

    $default  reduce using rule 16 (statement)


state 18

    4 statement_list: statement_list statement '\n' .

    $default  reduce using rule 4 (statement_list)


state 19

    5 statement: number TDEF NAME . '=' expr
    6          | number TDEF NAME . '=' STR
    7          | number TDEF NAME . '[' expr ']' '=' expr
    8          | number TDEF NAME . '=' '{' elmnts '}'
    9          | number TDEF NAME . '[' expr ']' '=' '{' elmnts '}'

    '='  shift, and go to state 22
    '['  shift, and go to state 23


state 20

   10 statement: number TH1 NAME . TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR
   11          | number TH1 NAME . TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP
   12          | number TH1 NAME . TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP var

    TSEP  shift, and go to state 24


state 21

   13 statement: number TH2 NAME . TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR
   14          | number TH2 NAME . TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP
   15          | number TH2 NAME . TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var

    TSEP  shift, and go to state 25


state 22

    5 statement: number TDEF NAME '=' . expr
    6          | number TDEF NAME '=' . STR
    8          | number TDEF NAME '=' . '{' elmnts '}'

    NAME  shift, and go to state 26
    NUM   shift, and go to state 27
    STR   shift, and go to state 28
    '+'   shift, and go to state 29
    '-'   shift, and go to state 30
    '!'   shift, and go to state 31
    '~'   shift, and go to state 32
    '{'   shift, and go to state 33
    '('   shift, and go to state 34

    expr  go to state 35


state 23

    7 statement: number TDEF NAME '[' . expr ']' '=' expr
    9          | number TDEF NAME '[' . expr ']' '=' '{' elmnts '}'

    NAME  shift, and go to state 26
    NUM   shift, and go to state 27
    '+'   shift, and go to state 29
    '-'   shift, and go to state 30
    '!'   shift, and go to state 31
    '~'   shift, and go to state 32
    '('   shift, and go to state 34

    expr  go to state 36


state 24

   10 statement: number TH1 NAME TSEP . STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR
   11          | number TH1 NAME TSEP . STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP
   12          | number TH1 NAME TSEP . STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP var

    STR  shift, and go to state 37


state 25

   13 statement: number TH2 NAME TSEP . STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR
   14          | number TH2 NAME TSEP . STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP
   15          | number TH2 NAME TSEP . STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var

    STR  shift, and go to state 38


state 26

   43 expr: NAME . '[' expr ']'
   44     | NAME . '(' elmnts ')'
   45     | NAME .

    '['  shift, and go to state 39
    '('  shift, and go to state 40

    $default  reduce using rule 45 (expr)


state 27

   46 expr: NUM .

    $default  reduce using rule 46 (expr)


state 28

    6 statement: number TDEF NAME '=' STR .

    $default  reduce using rule 6 (statement)


state 29

   39 expr: '+' . expr

    NAME  shift, and go to state 26
    NUM   shift, and go to state 27
    '+'   shift, and go to state 29
    '-'   shift, and go to state 30
    '!'   shift, and go to state 31
    '~'   shift, and go to state 32
    '('   shift, and go to state 34

    expr  go to state 41


state 30

   38 expr: '-' . expr

    NAME  shift, and go to state 26
    NUM   shift, and go to state 27
    '+'   shift, and go to state 29
    '-'   shift, and go to state 30
    '!'   shift, and go to state 31
    '~'   shift, and go to state 32
    '('   shift, and go to state 34

    expr  go to state 42


state 31

   40 expr: '!' . expr

    NAME  shift, and go to state 26
    NUM   shift, and go to state 27
    '+'   shift, and go to state 29
    '-'   shift, and go to state 30
    '!'   shift, and go to state 31
    '~'   shift, and go to state 32
    '('   shift, and go to state 34

    expr  go to state 43


state 32

   41 expr: '~' . expr

    NAME  shift, and go to state 26
    NUM   shift, and go to state 27
    '+'   shift, and go to state 29
    '-'   shift, and go to state 30
    '!'   shift, and go to state 31
    '~'   shift, and go to state 32
    '('   shift, and go to state 34

    expr  go to state 44


state 33

    8 statement: number TDEF NAME '=' '{' . elmnts '}'

    NAME  shift, and go to state 26
    NUM   shift, and go to state 27
    '+'   shift, and go to state 29
    '-'   shift, and go to state 30
    '!'   shift, and go to state 31
    '~'   shift, and go to state 32
    '('   shift, and go to state 34

    elmnts  go to state 45
    expr    go to state 46


state 34

   42 expr: '(' . expr ')'

    NAME  shift, and go to state 26
    NUM   shift, and go to state 27
    '+'   shift, and go to state 29
    '-'   shift, and go to state 30
    '!'   shift, and go to state 31
    '~'   shift, and go to state 32
    '('   shift, and go to state 34

    expr  go to state 47


state 35

    5 statement: number TDEF NAME '=' expr .
   20 expr: expr . TLOR expr
   21     | expr . TLAND expr
   22     | expr . '|' expr
   23     | expr . '^' expr
   24     | expr . '&' expr
   25     | expr . TEQ expr
   26     | expr . TNEQ expr
   27     | expr . TLE expr
   28     | expr . TGE expr
   29     | expr . '<' expr
   30     | expr . '>' expr
   31     | expr . TSL expr
   32     | expr . TSR expr
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '%' expr

    TLOR   shift, and go to state 48
    TLAND  shift, and go to state 49
    TEQ    shift, and go to state 50
    TNEQ   shift, and go to state 51
    TLE    shift, and go to state 52
    TGE    shift, and go to state 53
    '|'    shift, and go to state 54
    '^'    shift, and go to state 55
    '&'    shift, and go to state 56
    '<'    shift, and go to state 57
    '>'    shift, and go to state 58
    TSR    shift, and go to state 59
    TSL    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65

    $default  reduce using rule 5 (statement)


state 36

    7 statement: number TDEF NAME '[' expr . ']' '=' expr
    9          | number TDEF NAME '[' expr . ']' '=' '{' elmnts '}'
   20 expr: expr . TLOR expr
   21     | expr . TLAND expr
   22     | expr . '|' expr
   23     | expr . '^' expr
   24     | expr . '&' expr
   25     | expr . TEQ expr
   26     | expr . TNEQ expr
   27     | expr . TLE expr
   28     | expr . TGE expr
   29     | expr . '<' expr
   30     | expr . '>' expr
   31     | expr . TSL expr
   32     | expr . TSR expr
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '%' expr

    TLOR   shift, and go to state 48
    TLAND  shift, and go to state 49
    TEQ    shift, and go to state 50
    TNEQ   shift, and go to state 51
    TLE    shift, and go to state 52
    TGE    shift, and go to state 53
    '|'    shift, and go to state 54
    '^'    shift, and go to state 55
    '&'    shift, and go to state 56
    '<'    shift, and go to state 57
    '>'    shift, and go to state 58
    TSR    shift, and go to state 59
    TSL    shift, and go to state 60
    '+'    shift, and go to state 61
    '-'    shift, and go to state 62
    '*'    shift, and go to state 63
    '/'    shift, and go to state 64
    '%'    shift, and go to state 65
    ']'    shift, and go to state 66


state 37

   10 statement: number TH1 NAME TSEP STR . TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR
   11          | number TH1 NAME TSEP STR . TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP
   12          | number TH1 NAME TSEP STR . TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP STR TSEP var

    TSEP  shift, and go to state 67


state 38

   13 statement: number TH2 NAME TSEP STR . TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR
   14          | number TH2 NAME TSEP STR . TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP
   15          | number TH2 NAME TSEP STR . TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var TSEP var TSEP var TSEP var TSEP STR TSEP var

    TSEP  shift, and go to state 68


state 39

   43 expr: NAME '[' . expr ']'

    NAME  shift, and go to state 26
    NUM   shift, and go to state 27
    '+'   shift, and go to state 29
    '-'   shift, and go to state 30
    '!'   shift, and go to state 31
    '~'   shift, and go to state 32
    '('   shift, and go to state 34

    expr  go to state 69


state 40

   44 expr: NAME '(' . elmnts ')'

    NAME  shift, and go to state 26
    NUM   shift, and go to state 27
    '+'   shift, and go to state 29
    '-'   shift, and go to state 30
    '!'   shift, and go to state 31
    '~'   shift, and go to state 32
    '('   shift, and go to state 34

    elmnts  go to state 70
    expr    go to state 46


state 41

   20 expr: expr . TLOR expr
   21     | expr . TLAND expr
   22     | expr . '|' expr
   23     | expr . '^' expr
   24     | expr . '&' expr
   25     | expr . TEQ expr
   26     | expr . TNEQ expr
   27     | expr . TLE expr
   28     | expr . TGE expr
   29     | expr . '<' expr
   30     | expr . '>' expr
   31     | expr . TSL expr
   32     | expr . TSR expr
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '%' expr
   39     | '+' expr .

    $default  reduce using rule 39 (expr)


state 42

   20 expr: expr . TLOR expr
   21     | expr . TLAND expr
   22     | expr . '|' expr
   23     | expr . '^' expr
   24     | expr . '&' expr
   25     | expr . TEQ expr
   26     | expr . TNEQ expr
   27     | expr . TLE expr
   28     | expr . TGE expr
   29     | expr . '<' expr
   30     | expr . '>' expr
   31     | expr . TSL expr
   32     | expr . TSR expr
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '%' expr
   38     | '-' expr .

    $default  reduce using rule 38 (expr)


state 43

   20 expr: expr . TLOR expr
   21     | expr . TLAND expr
   22     | expr . '|' expr
   23     | expr . '^' expr
   24     | expr . '&' expr
   25     | expr . TEQ expr
   26     | expr . TNEQ expr
   27     | expr . TLE expr
   28     | expr . TGE expr
   29     | expr . '<' expr
   30     | expr . '>' expr
   31     | expr . TSL expr
   32     | expr . TSR expr
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '%' expr
   40     | '!' expr .

    $default  reduce using rule 40 (expr)


state 44

   20 expr: expr . TLOR expr
   21     | expr . TLAND expr
   22     | expr . '|' expr
   23     | expr . '^' expr
   24     | expr . '&' expr
   25     | expr . TEQ expr
   26     | expr . TNEQ expr
   27     | expr . TLE expr
   28     | expr . TGE expr
   29     | expr . '<' expr
   30     | expr . '>' expr
   31     | expr . TSL expr
   32     | expr . TSR expr
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '%' expr
   41     | '~' expr .

    $default  reduce using rule 41 (expr)


state 45

    8 statement: number TDEF NAME '=' '{' elmnts . '}'

    '}'  shift, and go to state 71


state 46

   18 elmnts: expr . ',' elmnts
   19       | expr .
   20 expr: expr . TLOR expr
   21     | expr . TLAND expr
   22     | expr . '|' expr
   23     | expr . '^' expr
   24     | expr . '&' expr
   25     | expr . TEQ expr
   26     | expr . TNEQ expr
   27     | expr . TLE expr
   28     | expr . TGE expr
   29     | expr . '<' expr
   30     | expr . '>' expr
   31     | expr . TSL expr
   32     | expr . TSR expr
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | expr . '%' expr
